# JetBrainsInstrumentTask

./: README.md
All auto/: configure
Autotools/: Makefile.am  Makefile.in  com_example_SomeClass.cpp  configure  configure.ac  run
Autotools/.deps/: com_example_SomeClass.Plo
Autotools/.libs/: libcom_example_SomeClass.la  libcom_example_SomeClass.lai  libcom_example_SomeClass.so.0.0.0
Autotools/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
Predetermined cpp/: com_example_SomeClass.cpp  com_example_SomeClass.java  configure  run
